Fix background color not showing on overflow

--- a/src/index.css
+++ b/src/index.css
@@ -3,11 +3,14 @@ body, html, #root {
     margin: 0;
 }
 
+body {
+    background-color: aliceblue;
+}
+
 #root {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: aliceblue;
 }
 
 .title {
